test/bad/classes/method03.px

class Test def
    func f(b: Int = 0): Void def
        skip

Test().f(a=3)
